Update and rename 2022-11-06-second.md to 2022-11-07-second.md

--- a/_posts/2022-11-07-second.md
+++ b/_posts/2022-11-07-second.md
@@ -1,12 +1,13 @@
 ---
 layout: post
 title: [프로그래밍언어론] BNF, EBNF 표기법, 파스트리
-date: 2022-11-06
+date: 2022-11-07
+last_modified_at: 2022-11-07
 tags: [bnf, ebnf, 파스트리]
+published: true
 toc: true
 ---
-
-# 프로그래밍 언어론
+프로그래밍 언어론
 
 ## BNF 표기법
 - 컴퓨터 언어에서 언어의 문법을 수학적인 수식으로 나타낼 때 사용하는 언어 도구
